--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: metabomxtr
 Type: Package
 Title: A package to run mixture models for truncated metabolomics data
-        with normal or lognormal distributions.
-Version: 1.3.0
-Date: 2014-07-12
+        with normal or lognormal distributions
+Version: 1.0.1
+Date: 2015-04-20
 Author: Michael Nodzenski, Anna Reisetter, Denise Scholtens
 Maintainer: Michael Nodzenski <michael.nodzenski@northwestern.edu>
 Depends: methods,Biobase
@@ -14,3 +14,4 @@ Description: The functions in this package return optimized parameter
         data with normal or lognormal distributions.
 License: GPL-2
 biocViews: Metabolomics, MassSpectrometry
+
