--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ import(optimx)
 import(Formula)
 import(methods)
 import(Biobase)
-importFrom(plyr, ldply, rbind.fill)
+import(ggplot2)
+import(plyr)
 importFrom(multtest, mt.rawp2adjp)
+importFrom(BiocParallel, bplapply)
 
 exportMethods(yvals)
 exportMethods(zdesign)
