--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: metabomxtr
 Type: Package
 Title: A package to run mixture models for truncated metabolomics data
         with normal or lognormal distributions
-Version: 1.9.0
-Date: 2016-06-06
+Version: 1.9.1
+Date: 2016-12-14
 Author: Michael Nodzenski, Anna Reisetter, Denise Scholtens
 Maintainer: Michael Nodzenski <michael.nodzenski@northwestern.edu>
 Depends: methods,Biobase
-Imports: optimx, Formula, plyr, multtest
-Suggests: xtable, ggplot2, reshape2
+Imports: optimx, Formula, plyr, multtest, BiocParallel, ggplot2
+Suggests: xtable, reshape2
 Description: The functions in this package return optimized parameter
         estimates and log likelihoods for mixture models of truncated
         data with normal or lognormal distributions.
