Add specific definitions to namespace
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/metabomxtr@125375 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ import(ggplot2)
 import(plyr)
 importFrom(multtest, mt.rawp2adjp)
 importFrom(BiocParallel, bplapply)
+importFrom("stats", "as.formula", "coef", "dnorm", "formula",
+             "model.matrix", "na.pass", "pchisq", "pnorm", "sd", "terms")
 
 exportMethods(yvals)
 exportMethods(zdesign)
