--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: metabomxtr
 Type: Package
 Title: A package to run mixture models for truncated metabolomics data
         with normal or lognormal distributions
-Version: 1.17.0
+Version: 1.17.1
 Date: 2017-05-30
 Author: Michael Nodzenski, Anna Reisetter, Denise Scholtens
 Maintainer: Michael Nodzenski <michael.nodzenski@northwestern.edu>
@@ -13,5 +13,5 @@ Description: The functions in this package return optimized parameter
         estimates and log likelihoods for mixture models of truncated
         data with normal or lognormal distributions.
 License: GPL-2
-biocViews: Metabolomics, MassSpectrometry
+biocViews: ImmunoOncology, Metabolomics, MassSpectrometry
 
